<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dimen_15dp"
    android:paddingRight="@dimen/dimen_15dp"
    android:paddingTop="@dimen/dimen_5dp"
    android:paddingBottom="@dimen/dimen_30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_txt"
        android:fontFamily="@font/proximanova_bold"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size25"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pwd"
        android:textColor="@color/text_black"
        android:inputType="number"
        android:padding="13dp"
        android:textSize="@dimen/text_size_20"
        android:background="@drawable/border_white"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pwd"/>
    <Button
        android:id="@+id/btn_pwdsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:textAllCaps="false"
        android:background="@drawable/gradient_skyblue"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_pwd"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>