<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginViewModel"
            type="com.digitalsignage.androidplayer.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!--Loading Layout-->
        <include
            android:id="@+id/layout_loader"
            layout="@layout/layout_loader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200dp"
            android:background="@color/blue"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/device_selection"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/white"
            android:contentDescription="@string/add_device"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginLeft="@dimen/dimen_10dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:src="@drawable/centre_stage_logo"
            android:tint="@color/white"
            android:layout_marginTop="@dimen/dimen_5dp"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgView" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/space">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="@dimen/dimen_15dp"
                        app:layout_constraintTop_toBottomOf="@+id/toolbar_device"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">
                        <TextView
                            android:id="@+id/txt_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/app_setting"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size22"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_horizontal_margin"
                            android:text="@string/ip_adds"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            android:layout_marginStart="@dimen/dimen_3dp"
                            android:layout_marginLeft="@dimen/dimen_3dp" />
                        <!-- android:fontFamily="@font/montserrat_medium"-->
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_deviceip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ip_adds"
                            android:textColor="@color/text_black"
                            android:inputType="text"
                            android:background="@drawable/edittext_border"
                            android:layout_marginTop="@dimen/dimen_5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_20dp"
                            android:text="@string/port_no"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size"
                            android:layout_marginStart="@dimen/dimen_3dp"
                            android:layout_marginLeft="@dimen/dimen_3dp" />
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_portno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/port_no"
                            android:textColor="@color/text_black"
                            android:inputType="text"
                            android:background="@drawable/edittext_border"
                            android:layout_marginTop="@dimen/dimen_5dp"/>
                        <Button
                            android:id="@+id/btn_submit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/submit"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size"
                            android:textAllCaps="false"
                            android:background="@drawable/gradient_skyblue"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/dimen_20dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardView"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>