<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="licenseviewmodel"
            type="com.digitalsignage.androidplayer.viewmodel.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <!--Loading Layout-->
        <include
            android:id="@+id/layout_loader"
            layout="@layout/layout_loader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200dp"
            android:background="@drawable/gradient_background"
            android:fitsSystemWindows="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/device_selection"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/white"
            android:visibility="gone"
            android:contentDescription="@string/add_device"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginLeft="@dimen/dimen_10dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:src="@drawable/centre_stage_logo"
            android:tint="@color/white"
            android:layout_marginTop="@dimen/dimen_5dp"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgView" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/space">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_15dp"
                android:paddingBottom="@dimen/dimen_10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="@dimen/dimen_15dp"
                        app:layout_constraintTop_toBottomOf="@+id/toolbar_device"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">
                        <TextView
                            android:id="@+id/txt_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/device_licencing"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/text_size22"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/txt_deviceudid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:textSize="@dimen/text_size_20"
                            android:layout_marginTop="@dimen/dimen_60dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <RadioGroup
                            android:id="@+id/radioGroup_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="@dimen/dimen_10dp">
                            <RadioButton
                                android:id="@+id/rdBtn_onlinereg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/online_reg"
                                android:textSize="@dimen/text_size_large"
                                android:layout_weight="1"/>
                            <RadioButton
                                android:id="@+id/rdBtn_offlinereg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/offline_reg"
                                android:textSize="@dimen/text_size_large"
                                android:layout_weight="1"
                                android:layout_marginStart="@dimen/dimen_15dp"/>
                        </RadioGroup>

                        <LinearLayout
                            android:id="@+id/ll_onlinereg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_20dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/activity_horizontal_margin"
                                android:text="@string/online_reg"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/text_size"
                                android:visibility="gone"
                                android:layout_marginStart="@dimen/dimen_3dp"
                                android:layout_marginLeft="@dimen/dimen_3dp" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/ll_offlinereg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_20dp"
                            android:visibility="gone"
                            android:orientation="vertical">
                            <Button
                                android:id="@+id/edt_attachfile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/attach_file"
                                android:textColor="@color/text_color_two"
                                android:textAllCaps="false"
                                android:textSize="@dimen/text_size_20"
                                android:fontFamily="@font/poppins_regular"
                                android:drawableEnd="@drawable/ic_attachment"
                                android:drawablePadding="@dimen/dimen_10dp"
                                android:background="@drawable/edittext_border"
                                android:layout_marginTop="@dimen/dimen_5dp"/>
                            <TextView
                                android:id="@+id/txt_filename"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dimen_5dp"
                                tools:text="test.txt"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/text_size"
                                android:gravity="end"
                                android:layout_gravity="end"
                                android:layout_marginStart="@dimen/dimen_3dp"
                                android:layout_marginLeft="@dimen/dimen_3dp" />
                        </LinearLayout>
                        <Button
                            android:id="@+id/btn_submit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/submit"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size"
                            android:textAllCaps="false"
                            android:background="@drawable/gradient_skyblue"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/dimen_20dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardView"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>